--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -5,13 +5,14 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 776px;
+  min-height: 797px;
 }
 
 .u-section-1 .u-group-1 {
   width: 675px;
   min-height: 482px;
-  margin: 315px 0 0 auto;
+  height: auto;
+  margin: 296px 0 19px auto;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -37,11 +38,12 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 640px;
+    min-height: 657px;
   }
 
   .u-section-1 .u-group-1 {
     width: 557px;
+    height: auto;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -60,7 +62,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 490px;
+    min-height: 503px;
   }
 
   .u-section-1 .u-group-1 {
@@ -83,7 +85,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 368px;
+    min-height: 377px;
   }
 
   .u-section-1 .u-group-1 {
@@ -110,7 +112,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 232px;
+    min-height: 237px;
   }
 
   .u-section-1 .u-group-1 {
@@ -481,7 +483,7 @@
 .u-section-3 .u-group-1 {
   width: 855px;
   min-height: 193px;
-  margin: -481px 0 388px auto;
+  margin: -481px 0 0 auto;
 }
 
 .u-section-3 .u-container-layout-4 {
@@ -499,16 +501,17 @@
   margin: 20px 0 0 355px;
 }
 
+.u-section-3 .u-btn-1 {
+  font-size: 0.875rem;
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 311px auto 60px;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 700px;
-  }
-
-  .u-section-3 .u-shape-1 {
-    width: 478px;
-    height: 478px;
-    margin-top: 212px;
-    margin-left: -88px;
+    min-height: 465px;
   }
 
   .u-section-3 .u-layout-cell-1 {
@@ -580,10 +583,6 @@
     position: relative;
   }
 
-  .u-section-3 .u-group-1 {
-    width: 705px;
-  }
-
   .u-section-3 .u-container-layout-4 {
     padding-right: 16px;
   }
@@ -599,14 +598,7 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 679px;
-  }
-
-  .u-section-3 .u-shape-1 {
-    width: 366px;
-    height: 366px;
-    margin-top: 313px;
-    margin-left: -67px;
+    min-height: 311px;
   }
 
   .u-section-3 .u-layout-cell-1 {
@@ -691,9 +683,7 @@
   }
 
   .u-section-3 .u-group-1 {
-    width: 540px;
-    margin-top: -533px;
-    margin-bottom: 434px;
+    width: 720px;
   }
 
   .u-section-3 .u-container-layout-4 {
@@ -712,13 +702,7 @@
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1376px;
-  }
-
-  .u-section-3 .u-shape-1 {
-    width: 343px;
-    height: 343px;
-    margin-left: -51px;
+    min-height: 411px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -790,9 +774,7 @@
   }
 
   .u-section-3 .u-group-1 {
-    width: 506px;
-    margin-top: -1262px;
-    margin-bottom: 1163px;
+    width: 540px;
   }
 
   .u-section-3 .u-container-layout-4 {
@@ -811,14 +793,17 @@
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1451px;
+    min-height: 171px;
   }
 
   .u-section-3 .u-shape-1 {
-    width: 288px;
-    height: 288px;
-    margin-top: 388px;
-    margin-left: -32px;
+    width: 340px;
+    height: 340px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-top: -194px;
   }
 
   .u-section-3 .u-container-layout-1 {
