--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -877,17 +877,18 @@
 }
 
 .u-section-7 .u-list-1 {
-  margin: 40px 0;
+  margin-top: 40px;
+  margin-bottom: 60px;
 }
 
 .u-section-7 .u-repeater-1 {
   grid-template-columns: calc(50% - 15px) calc(50% - 15px);
-  min-height: 335px;
+  min-height: 291px;
   grid-gap: 30px 30px;
 }
 
 .u-section-7 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 30px 0;
 }
 
 .u-section-7 .u-image-1 {
@@ -923,25 +924,8 @@
   margin: 19px 0 0;
 }
 
-.u-section-7 .u-social-icons-1 {
-  height: 32px;
-  min-height: 16px;
-  width: 94px;
-  min-width: 62px;
-  margin: 37px auto 0 0;
-}
-
-.u-section-7 .u-icon-1 {
-  background-image: none;
-}
-
-.u-section-7 .u-icon-2 {
-  color: rgb(0, 0, 0) !important;
-  background-image: none;
-}
-
 .u-section-7 .u-container-layout-3 {
-  padding: 30px;
+  padding: 30px 30px 0;
 }
 
 .u-section-7 .u-image-2 {
@@ -977,18 +961,6 @@
   margin: 19px 0 0;
 }
 
-.u-section-7 .u-social-icons-2 {
-  height: 32px;
-  min-height: 16px;
-  width: 94px;
-  min-width: 62px;
-  margin: 37px auto 0 0;
-}
-
-.u-section-7 .u-icon-4 {
-  color: rgb(0, 0, 0) !important;
-}
-
 .u-section-7 .u-gallery-nav-1 {
   position: absolute;
   left: 10px;
@@ -1004,11 +976,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-7 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 15px));
   }
@@ -1069,8 +1036,6 @@
 
   .u-section-7 .u-list-1 {
     margin-top: 105px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-7 .u-image-1 {
@@ -1095,7 +1060,7 @@
 }
 
 .u-section-8 .u-sheet-1 {
-  min-height: 406px;
+  min-height: 352px;
 }
 
 .u-section-8 .u-list-1 {
@@ -1105,13 +1070,13 @@
 
 .u-section-8 .u-repeater-1 {
   grid-template-columns: 100%;
-  min-height: 335px;
+  min-height: 291px;
   grid-gap: 30px 30px;
   grid-auto-columns: 100%;
 }
 
 .u-section-8 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 30px 0;
 }
 
 .u-section-8 .u-image-1 {
@@ -1145,18 +1110,6 @@
   font-weight: 300;
   font-style: normal;
   margin: 19px 0 0;
-}
-
-.u-section-8 .u-social-icons-1 {
-  height: 32px;
-  min-height: 16px;
-  width: 94px;
-  min-width: 62px;
-  margin: 37px auto 0 0;
-}
-
-.u-section-8 .u-icon-2 {
-  color: rgb(0, 0, 0) !important;
 }
 
 .u-section-8 .u-gallery-nav-1 {
@@ -1214,27 +1167,190 @@
     margin-top: 20px;
     margin-right: auto;
   }
-} .u-section-9 {
+}.u-section-9 .u-sheet-1 {
+  min-height: 356px;
+}
+
+.u-section-9 .u-layout-wrap-1 {
+  margin: 60px auto 60px 0;
+}
+
+.u-section-9 .u-layout-cell-1 {
+  min-height: 169px;
+}
+
+.u-section-9 .u-container-layout-1 {
+  padding: 30px 60px;
+}
+
+.u-section-9 .u-text-1 {
+  margin: 0 auto 0 0;
+}
+
+.u-section-9 .u-text-2 {
+  margin: 20px 0 0;
+}
+
+.u-section-9 .u-btn-1 {
+  background-image: none;
+  border-style: none none solid;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+}
+
+.u-section-9 .u-layout-cell-2 {
+  min-height: 236px;
+}
+
+.u-section-9 .u-container-layout-2 {
+  padding: 30px 42px;
+}
+
+.u-section-9 .u-social-icons-1 {
+  height: 48px;
+  min-height: 16px;
+  width: 252px;
+  min-width: 124px;
+  margin: 0 auto;
+}
+
+.u-section-9 .u-icon-1 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-section-9 .u-icon-2 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-section-9 .u-icon-3 {
+  color: rgb(0, 0, 0) !important;
+}
+
+.u-section-9 .u-icon-4 {
+  height: 48px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 315px;
+  }
+
+  .u-section-9 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 139px;
+  }
+
+  .u-section-9 .u-btn-1 {
+    margin-top: 20px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 195px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 269px;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-9 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 149px;
+  }
+
+  .u-section-9 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 464px;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 191px;
+  }
+
+  .u-section-9 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 46px;
+  }
+
+  .u-section-9 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-social-icons-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 428px;
+  }
+
+  .u-section-9 .u-layout-wrap-1 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-layout-cell-1 {
+    min-height: 212px;
+  }
+
+  .u-section-9 .u-layout-cell-2 {
+    min-height: 120px;
+  }
+
+  .u-section-9 .u-container-layout-2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+} .u-section-10 {
   background-image: url("images/pexels-photo-2422294.jpeg");
   background-position: 50% 50%;
 }
 
-.u-section-9 .u-sheet-1 {
+.u-section-10 .u-sheet-1 {
   min-height: 704px;
 }
 
-.u-section-9 .u-group-1 {
+.u-section-10 .u-group-1 {
   width: 827px;
   min-height: 584px;
   background-image: none;
   margin: 60px auto;
 }
 
-.u-section-9 .u-container-layout-1 {
+.u-section-10 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-9 .u-text-1 {
+.u-section-10 .u-text-1 {
   letter-spacing: normal;
   font-size: 3rem;
   text-transform: none;
@@ -1242,65 +1358,65 @@
   margin: 22px 0 0;
 }
 
-.u-section-9 .u-form-1 {
+.u-section-10 .u-form-1 {
   height: 427px;
   width: 703px;
   margin: 14px auto 0;
 }
 
-.u-section-9 .u-label-1 {
+.u-section-10 .u-label-1 {
   font-weight: 700;
 }
 
-.u-section-9 .u-input-1 {
+.u-section-10 .u-input-1 {
   font-size: 1.25rem;
 }
 
-.u-section-9 .u-label-2 {
+.u-section-10 .u-label-2 {
   font-weight: 700;
 }
 
-.u-section-9 .u-input-2 {
+.u-section-10 .u-input-2 {
   font-size: 1.25rem;
 }
 
-.u-section-9 .u-form-group-3 {
+.u-section-10 .u-form-group-3 {
   margin-left: 0;
 }
 
-.u-section-9 .u-label-3 {
+.u-section-10 .u-label-3 {
   font-weight: 700;
 }
 
-.u-section-9 .u-input-3 {
+.u-section-10 .u-input-3 {
   font-size: 1.25rem;
 }
 
-.u-section-9 .u-form-group-4 {
+.u-section-10 .u-form-group-4 {
   margin-left: 0;
 }
 
-.u-section-9 .u-label-4 {
+.u-section-10 .u-label-4 {
   font-weight: 700;
 }
 
-.u-section-9 .u-input-4 {
+.u-section-10 .u-input-4 {
   font-size: 1.25rem;
 }
 
-.u-section-9 .u-form-group-5 {
+.u-section-10 .u-form-group-5 {
   margin-left: 0;
 }
 
-.u-section-9 .u-label-5 {
+.u-section-10 .u-label-5 {
   font-weight: 700;
 }
 
-.u-section-9 .u-input-5 {
+.u-section-10 .u-input-5 {
   font-size: 1.25rem;
 }
 
-.u-section-9 .u-btn-1 {
+.u-section-10 .u-btn-1 {
   background-image: none;
   border-style: none;
   font-size: 0.875rem;
@@ -1309,17 +1425,17 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-9 .u-sheet-1 {
+  .u-section-10 .u-sheet-1 {
     min-height: 580px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-9 .u-sheet-1 {
+  .u-section-10 .u-sheet-1 {
     min-height: 704px;
   }
 
-  .u-section-9 .u-group-1 {
+  .u-section-10 .u-group-1 {
     margin-top: 61px;
     margin-bottom: 59px;
     margin-right: initial;
@@ -1327,47 +1443,47 @@
     width: auto;
   }
 
-  .u-section-9 .u-text-1 {
+  .u-section-10 .u-text-1 {
     font-size: 2.25rem;
   }
 
-  .u-section-9 .u-form-1 {
+  .u-section-10 .u-form-1 {
     width: 660px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-9 .u-sheet-1 {
+  .u-section-10 .u-sheet-1 {
     min-height: 528px;
   }
 
-  .u-section-9 .u-container-layout-1 {
+  .u-section-10 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-9 .u-form-1 {
+  .u-section-10 .u-form-1 {
     width: 520px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-9 .u-sheet-1 {
+  .u-section-10 .u-sheet-1 {
     min-height: 863px;
   }
 
-  .u-section-9 .u-group-1 {
+  .u-section-10 .u-group-1 {
     min-height: 743px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-9 .u-text-1 {
+  .u-section-10 .u-text-1 {
     font-size: 1.875rem;
   }
 
-  .u-section-9 .u-form-1 {
+  .u-section-10 .u-form-1 {
     width: 320px;
   }
 }
