--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -714,69 +714,75 @@
     margin-top: 19px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 467px;
+  min-height: 690px;
 }
 
-.u-section-5 .u-text-1 {
-  font-size: 3rem;
-  width: 746px;
-  font-weight: 700;
-  margin: 60px auto 0;
+.u-section-5 .u-layout-wrap-1 {
+  margin: 60px auto;
 }
 
-.u-section-5 .u-line-1 {
-  width: 198px;
-  height: 10px;
-  transform-origin: left center;
-  margin: 30px auto 0;
+.u-section-5 .u-image-1 {
+  min-height: 570px;
+  background-image: url("images/3.png");
+  background-position: 50% 50%;
 }
 
-.u-section-5 .u-text-2 {
-  font-size: 1.25rem;
-  margin: 30px 60px 38px;
+.u-section-5 .u-container-layout-1 {
+  padding: 30px 40px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-5 .u-text-2 {
-    width: 271px;
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-5 .u-sheet-1 {
+    min-height: 590px;
+  }
+
+  .u-section-5 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-5 .u-image-1 {
+    min-height: 470px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 429px;
+    min-height: 480px;
   }
 
-  .u-section-5 .u-text-1 {
-    font-size: 2.25rem;
-    width: 720px;
+  .u-section-5 .u-image-1 {
+    min-height: 360px;
   }
 
-  .u-section-5 .u-text-2 {
-    margin-bottom: -67px;
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-text-1 {
-    width: 540px;
+  .u-section-5 .u-sheet-1 {
+    min-height: 390px;
+  }
+
+  .u-section-5 .u-image-1 {
+    min-height: 270px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 506px;
+    min-height: 290px;
   }
 
-  .u-section-5 .u-text-1 {
-    font-size: 1.875rem;
-    width: 340px;
-  }
-
-  .u-section-5 .u-text-2 {
-    margin-bottom: -45px;
+  .u-section-5 .u-image-1 {
+    min-height: 170px;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 690px;
@@ -787,26 +793,13 @@
   margin-bottom: 60px;
 }
 
-.u-section-6 .u-layout-cell-1 {
+.u-section-6 .u-image-1 {
   min-height: 570px;
-  background-image: none;
+  background-image: url("images/2.png");
 }
 
 .u-section-6 .u-container-layout-1 {
   padding: 30px 40px;
-}
-
-.u-section-6 .u-icon-1 {
-  width: 115px;
-  height: 115px;
-  margin: 25px auto 0 0;
-}
-
-.u-section-6 .u-text-1 {
-  font-size: 1.88889rem;
-  font-weight: 400;
-  line-height: 1;
-  margin: 6px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -814,12 +807,8 @@
     min-height: 552px;
   }
 
-  .u-section-6 .u-layout-cell-1 {
+  .u-section-6 .u-image-1 {
     min-height: 470px;
-  }
-
-  .u-section-6 .u-icon-1 {
-    color: rgb(255, 255, 255) !important;
   }
 }
 
@@ -828,18 +817,13 @@
     min-height: 657px;
   }
 
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 677px;
+  .u-section-6 .u-image-1 {
+    min-height: 360px;
   }
 
   .u-section-6 .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-section-6 .u-text-1 {
-    font-size: 1.25rem;
-    width: auto;
   }
 }
 
@@ -848,8 +832,8 @@
     min-height: 1149px;
   }
 
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-6 .u-image-1 {
+    min-height: 270px;
   }
 
   .u-section-6 .u-container-layout-1 {
@@ -861,6 +845,10 @@
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
     min-height: 805px;
+  }
+
+  .u-section-6 .u-image-1 {
+    min-height: 170px;
   }
 } .u-section-7 {
   background-image: none;
