--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -275,7 +275,7 @@
   text-transform: none;
   font-size: 3rem;
   font-weight: 700;
-  margin: 0;
+  margin: 180px 0 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -285,7 +285,7 @@
   text-transform: uppercase;
   background-image: none;
   font-weight: 400;
-  margin: 49px auto 0 0;
+  margin: 49px auto 0 1px;
 }
 
 .u-section-3 .u-layout-cell-2 {
@@ -322,6 +322,10 @@
 
   .u-section-3 .u-layout-cell-1 {
     min-height: 586px;
+  }
+
+  .u-section-3 .u-btn-1 {
+    margin-left: 0;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -796,6 +800,7 @@
 .u-section-6 .u-image-1 {
   min-height: 570px;
   background-image: url("images/2.png");
+  background-position: 50% 50%;
 }
 
 .u-section-6 .u-container-layout-1 {
