--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/pexels-photo-3285196.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/favicon1.png?rand=6a1f");
   background-position: 50% 50%;
 }
 
@@ -860,7 +860,7 @@
 }
 
 .u-section-7 .u-sheet-1 {
-  min-height: 527px;
+  min-height: 483px;
 }
 
 .u-section-7 .u-text-1 {
@@ -871,7 +871,7 @@
 
 .u-section-7 .u-list-1 {
   margin-top: 40px;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .u-section-7 .u-repeater-1 {
