--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -101,7 +101,7 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin: 35px 0 0;
+  margin: 35px 40px 0 0;
 }
 
 .u-section-2 .u-list-item-2 {
@@ -124,7 +124,7 @@
 }
 
 .u-section-2 .u-text-4 {
-  margin: 35px 0 0;
+  margin: 35px 40px 0 0;
 }
 
 .u-section-2 .u-list-item-3 {
@@ -147,7 +147,7 @@
 }
 
 .u-section-2 .u-text-6 {
-  margin: 35px 0 0;
+  margin: 35px 59px 0 0;
 }
 
 .u-section-2 .u-list-item-4 {
@@ -171,7 +171,7 @@
 }
 
 .u-section-2 .u-text-8 {
-  margin: 35px 0 0;
+  margin: 35px 8px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -211,16 +211,32 @@
     padding-top: 30px;
   }
 
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
   .u-section-2 .u-container-layout-2 {
     padding-top: 30px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-right: 0;
   }
 
   .u-section-2 .u-container-layout-3 {
     padding-top: 30px;
   }
 
+  .u-section-2 .u-text-6 {
+    margin-right: 0;
+  }
+
   .u-section-2 .u-container-layout-4 {
     padding-top: 30px;
+  }
+
+  .u-section-2 .u-text-8 {
+    margin-right: 0;
   }
 }
 
@@ -457,7 +473,7 @@
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 0 30px 23px;
+  padding: 0 30px 32px;
 }
 
 .u-section-4 .u-image-2 {
@@ -523,7 +539,7 @@
 }
 
 .u-section-4 .u-container-layout-4 {
-  padding: 0 30px 23px;
+  padding: 0 30px 32px;
 }
 
 .u-section-4 .u-image-4 {
@@ -556,7 +572,7 @@
 }
 
 .u-section-4 .u-container-layout-5 {
-  padding: 0 30px 23px;
+  padding: 0 30px 32px;
 }
 
 .u-section-4 .u-image-5 {
@@ -642,7 +658,19 @@
     padding-bottom: 30px;
   }
 
+  .u-section-4 .u-container-layout-2 {
+    padding-bottom: 30px;
+  }
+
   .u-section-4 .u-container-layout-3 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-4 .u-container-layout-4 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-4 .u-container-layout-5 {
     padding-bottom: 30px;
   }
 
