--- a/Bobs-Daily.css
+++ b/Bobs-Daily.css
@@ -1328,3 +1328,151 @@
     padding-bottom: 20px;
   }
 }
+
+ .u-section-20 {
+  min-height: 972px;
+}
+
+.u-section-20 .u-shape-1 {
+  height: 193px;
+  background-image: none;
+  margin: 121px 0 0;
+}
+
+.u-section-20 .u-list-1 {
+  grid-template-rows: auto auto;
+  width: 1031px;
+  margin: -254px auto 60px;
+}
+
+.u-section-20 .u-repeater-1 {
+  grid-template-columns: calc(50% - 15px) calc(50% - 15px);
+  min-height: 826px;
+  grid-gap: 30px 30px;
+  grid-auto-columns: calc(50% - 15px);
+}
+
+.u-section-20 .u-container-layout-1 {
+  padding: 20px;
+}
+
+.u-section-20 .u-image-1 {
+  width: 180px;
+  height: 180px;
+  background-image: url("images/unnamed.png");
+  background-position: 50% 50%;
+  margin: 8px auto 0;
+}
+
+.u-section-20 .u-text-1 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin: 20px auto 0;
+}
+
+.u-section-20 .u-text-2 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  margin: 10px auto 0;
+}
+
+.u-section-20 .u-text-3 {
+  margin: 20px 0 0;
+}
+
+.u-section-20 .u-list-item-2 {
+  background-image: none;
+}
+
+.u-section-20 .u-container-layout-2 {
+  padding: 20px;
+}
+
+.u-section-20 .u-image-2 {
+  width: 180px;
+  height: 180px;
+  object-position: 50% 0%;
+  background-image: url("images/ScreenShot2022-02-13at1.03.32AM.png");
+  background-position: 50% 50%;
+  margin: 8px auto 0;
+}
+
+.u-section-20 .u-text-4 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin: 20px auto 0;
+}
+
+.u-section-20 .u-text-5 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  margin: 10px auto 0;
+}
+
+.u-section-20 .u-text-6 {
+  margin: 20px 0 0;
+}
+
+.u-section-20 .u-container-layout-3 {
+  padding: 20px;
+}
+
+.u-section-20 .u-image-3 {
+  width: 180px;
+  height: 180px;
+  background-image: url("images/F49C274F-440A-4F3D-A54F-26A840413BE7.JPEG");
+  background-position: 50% 50%;
+  margin: 8px auto 0;
+}
+
+.u-section-20 .u-text-7 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin: 20px auto 0;
+}
+
+.u-section-20 .u-text-8 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  margin: 10px auto 0;
+}
+
+.u-section-20 .u-text-9 {
+  margin: 20px 0 0;
+}
+
+.u-section-20 .u-container-layout-4 {
+  padding: 20px;
+}
+
+.u-section-20 .u-image-4 {
+  width: 180px;
+  height: 180px;
+  background-image: url("images/ScreenShot2022-03-19at10.43.14PM.png");
+  background-position: 50% 0%;
+  margin: 8px auto 0;
+}
+
+.u-section-20 .u-text-10 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin: 20px auto 0;
+}
+
+.u-section-20 .u-text-11 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  margin: 10px auto 0;
+}
+
+.u-section-20 .u-text-12 {
+  margin: 20px 0 0;
+}
